--- a/AllSpice.client/package.json
+++ b/AllSpice.client/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.0",
+    "@tailwindcss/forms": "^0.5.3",
     "@vue/cli-plugin-eslint": "5.0.8",
     "@vue/eslint-config-standard": "^8.0.1",
     "autoprefixer": "^10.4.14",
